<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrim"
    tools:context=".presentation.home.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="70dp"
                android:textAlignment="center"
                android:text="@string/text_register_password"
                android:textColor="@color/accentColor"
                android:textSize="18sp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:background="#3D4361"
                android:gravity="center|start"
                app:errorTextAppearance="@android:color/holo_red_light"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_register_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:shadowColor="@color/white"
                    android:textColor="#80849C"
                    android:textColorHint="#80849C" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_formEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:background="#3D4361"
                android:gravity="center|start"
                app:errorTextAppearance="@android:color/holo_red_light"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_formEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:shadowColor="@color/white"
                    android:textColor="#80849C"
                    android:textColorHint="#80849C" />


            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:background="@drawable/my_button"
                android:text="@string/ready"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/accentColor"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />










        </LinearLayout>

    </ScrollView>

</LinearLayout>