<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrim"
    tools:context=".presentation.home.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_image_view_logo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                android:src="@mipmap/logo_cherry" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_formEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:background="#3D4361"
                android:gravity="center|start"
                app:errorTextAppearance="@android:color/holo_red_light"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_formEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:shadowColor="@color/white"
                    android:textColor="#80849C"
                    android:textColorHint="#80849C" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_formPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:background="#3D4361"
                android:gravity="center|start"
                app:errorTextAppearance="@android:color/holo_red_light"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_formPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:shadowColor="@color/white"
                    android:textColor="#80849C"
                    android:textColorHint="#80849C" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:background="@drawable/my_button"
                android:text="@string/lets_go"
                android:textSize="16sp"
                android:textColor="@color/accentColor"
                android:textAllCaps="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawableEnd="@drawable/arrow_button"
                android:drawablePadding="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="140dp"
                android:background="@android:color/transparent"
                android:text="@string/not_registered"
                android:textSize="12sp"
                android:textColor="@color/accentColor"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>