<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        
        <variable
            name="viewmodel"
            type="com.cactus.cifracherry.presentation.home.listcard.CardVielModel" />
        
    </data>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="190dp"
    app:cardBackgroundColor="@color/colorSec"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_profile_thin"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/accentColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/user_name"
            android:text="@{viewmodel.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/accentColor"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintStart_toEndOf="@id/iv_photo"
            app:layout_constraintTop_toTopOf="@id/iv_photo"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
            tools:text="@string/user_name"/>

        <TextView
            android:text="@{viewmodel.specialty}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/accentColor"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintStart_toEndOf="@id/iv_photo"
            app:layout_constraintTop_toTopOf="@id/iv_photo"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
            tools:text="@string/specialty"/>

        <TextView
            android:text="@{viewmodel.description}"
            android:id="@+id/user_description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/accentColor"
            android:maxHeight="40dp"
            android:textAlignment="center"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo"
            tools:text="@string/user_bios"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:onClick="@{()->viewmodel.onClickMark()}"
            android:src="@{viewmodel.marked ? @drawable/ic_mark_selected : @drawable/ic_mark_noselected }"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/user_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_mark_selected"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:onClick="@{()->viewmodel.onClickDelete()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

</layout>